--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#0b1220" />
     <meta name="description" content="A single-task, round-robin scheduler for your todos." />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=ZCOOL+KuaiLe&display=swap"
+      rel="stylesheet"
+    />
     <script>
       (() => {
         try {
